# legalmodel

./: .env.example  .gitignore  COMPLETE_DATA_INVENTORY.md  COMPLETE_FILE_INVENTORY.json  CONTEXT_HANDOVER_FOR_STRATEGY.md  EXPLORATION_REPORT.md  PIPELINE_INTEGRATION_RESULTS.md  PRE_TRAINING_REVIEW.json  README.md  STRATEGY_AND_PHASE_A.md  SYSTEM_HANDOVER_COMPLETE.md  SYSTEM_REVIEW.md  USER_GUIDE.md  kmae250140.txt  pyproject.toml  run_binary_pipeline.py  run_dapt.py  run_dashboard.bat  run_evaluate.py  run_evaluate_binary.py  run_finetune.py  run_finetune_binary.py
.claude/: settings.local.json
Data/processed/: ansokan_structure_analysis.json  ansokan_texts.json  binary_reclassification.json  clustering_validation_report.json  decision_features_sundin2026.json  label_overrides.json  label_review.txt  label_suggestions_4_new.json  labeled_dataset.json  labeled_dataset_binary.json  lagtiftning_categorization.json  lagtiftning_usefulness.json  linkage_table.json  new_4_decisions_features.json  sundin_feature_importance.json  weakly_labeled_applications.json
_archive/: BESLUTSTODSBEDOMNING.md  HYBRID_APPROACH_REVIEW.md  LABELING_STRATEGY_VS_PAPER.md  ONBOARDING_AND_ANALYSIS_REPORT.md  PHASE_A_PLAN_REVIEW.md  README.md
evaluation_reports/: binary_results.json  final_report.json  final_results.json  overfitting_analysis.json
nap-legal-ai-advisor/: app.py  requirements.txt
nap-legal-ai-advisor/backend/: agents.py  llm_engine.py  rag_system.py  risk_predictor.py  search_engine.py
nap-legal-ai-advisor/integration/: chat_handler.py  search_handler.py  shared_context.py
nap-legal-ai-advisor/ui/: chat_interface.py  explorer_interface.py  overview_interface.py  search_interface.py  (+1 more)
scripts/: 02_clean_court_texts.py  03_create_labeled_dataset.py  04_link_to_viss.py  05_finetune_legalbert.py  06_evaluate_basic.py  add_4_new_domar.py  build_dapt_corpus.py  diagnose_search_index.py  download_models.py  extract_all_pdfs.py  extract_decision_metadata.py  extract_pdf_text.py  inventory.py  sundin_feature_extraction.py  sundin_validation.py  weak_labels_applications.py
tests/: conftest.py  test_agents.py  test_data_loader.py  test_integration.py  test_knowledge_base.py  test_llm_engine.py  test_rag_system.py  test_risk_predictor.py  test_search_engine.py  test_startup_integration.py  test_ui_explorer.py
(+3 files in other folders)
